--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "fastclick": "^1.0.6",
+    "swiper": "^6.3.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-awesome-swiper": "^2.6.7",
+    "vue-router": "^3.0.1",
+    "webpack-dev-server": "^2.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -47,7 +52,6 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
