--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "better-scroll": "^1.13.2",
     "fastclick": "^1.0.6",
     "swiper": "^6.3.4",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.0.1",
+    "vuex": "^3.5.1",
     "webpack-dev-server": "^2.9.1"
   },
   "devDependencies": {
